# swagger/docs.yml
@@ -10,6 +10,8 @@ paths:
       summary: Получить список библиотек в городе
       tags:
         - Gateway API
+      security:
+        - bearerAuth: [ ]
       parameters:
         - name: page
           in: query
@@ -37,12 +39,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/LibraryPaginationResponse"
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
   /api/v1/libraries/{libraryUid}/books:
     get:
       summary: Получить список книг в выбранной библиотеке
       tags:
         - Gateway API
+      security:
+        - bearerAuth: [ ]
       parameters:
         - name: page
           in: query
@@ -75,19 +85,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/LibraryBookPaginationResponse"
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
   /api/v1/reservations:
     get:
       summary: Получить информацию по всем взятым в прокат книгам пользователя
       tags:
         - Gateway API
-      parameters:
-        - name: X-User-Name
-          in: header
-          description: Имя пользователя
-          required: true
-          schema:
-            type: string
+      security:
+        - bearerAuth: [ ]
       responses:
         "200":
           description: Информация по всем взятым в прокат книгам
@@ -97,18 +108,19 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/BookReservationResponse"
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
     post:
       summary: Взять книгу в библиотеке
       tags:
         - Gateway API
-      parameters:
-        - name: X-User-Name
-          in: header
-          description: Имя пользователя
-          required: true
-          schema:
-            type: string
+      security:
+        - bearerAuth: [ ]
       requestBody:
         content:
           application/json:
@@ -127,12 +139,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ValidationErrorResponse"
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
   /api/v1/reservations/{reservationUid}/return:
     post:
       summary: Вернуть книгу
       tags:
         - Gateway API
+      security:
+        - bearerAuth: [ ]
       parameters:
         - name: reservationUid
           in: path
@@ -141,12 +161,6 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: X-User-Name
-          in: header
-          description: Имя пользователя
-          required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
@@ -155,6 +169,12 @@ paths:
       responses:
         "204":
           description: Книга успешно возвращена
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "404":
           description: Бронирование не найдено
           content:
@@ -167,13 +187,8 @@ paths:
       summary: Получить рейтинг пользователя
       tags:
         - Gateway API
-      parameters:
-        - name: X-User-Name
-          in: header
-          description: Имя пользователя
-          required: true
-          schema:
-            type: string
+      security:
+        - bearerAuth: [ ]
       responses:
         "200":
           description: Рейтинг пользователя
@@ -181,8 +196,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserRatingResponse"
+        "401":
+          description: Ошибка авторизации
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   schemas:
     LibraryPaginationResponse:
       type: object
